--- a/src/app/components/products/product-create/product-create.component.html
+++ b/src/app/components/products/product-create/product-create.component.html
@@ -4,9 +4,7 @@
 
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationCustom01">
-            Nome do produto
-      </label>
+      <label for="validationCustom01">Nome do produto</label>
       <input type="text"
             class="form-control"
             value=""
@@ -16,9 +14,7 @@
     </div>
 
     <div class="col-md-6 mb-3">
-      <label for="validationCustom02">
-            ID da Catergoria
-      </label>
+      <label for="validationCustom02">ID da Catergoria</label>
       <input type="text"
             class="form-control"
             value=""
@@ -31,9 +27,7 @@
 
   <div class="form-row">
     <div class="col-md-6 mb-3">
-      <label for="validationCustom03">
-            Cor do produto
-      </label>
+      <label for="validationCustom03">Cor do produto</label>
       <input type="text"
             class="form-control"
             id="validationCustom03"
@@ -53,9 +47,7 @@
 
 
   <div class="form-row">
-      <label for="validationCustom03">
-            Descrição
-      </label>
+      <label for="validationCustom03">Descrição</label>
       <textarea class="form-control"
               placeholder="Enter Product Description"
               required name="product_description"
