--- a/src/app/components/products/product-update/product-update.component.html
+++ b/src/app/components/products/product-update/product-update.component.html
@@ -1,14 +1,26 @@
-<form (submit)="updateProduct(updateProductForm)" #updateProductForm="ngForm" class="mb-4">
+<form (submit)="updateProduct(updateProductForm)"
+      #updateProductForm="ngForm"
+      class="mb-4">
 
     <div class="form-row">
       <div class="col-md-6 mb-3">
         <label>Nome do produto</label>
-        <input type="text" class="form-control"  [(ngModel)]="productDetails.productName" required name="productName" ngModel/>
-
+        <input type="text"
+              class="form-control"
+              [(ngModel)]="productDetails.productName"
+              required name="productName"
+              ngModel
+        />
       </div>
+
       <div class="col-md-6 mb-3">
         <label for="validationCustom02">ID da Categoria</label>
-        <input type="text" class="form-control"  [(ngModel)]="productDetails.categoryId" required name="categoryId" ngModel/>
+        <input type="text"
+              class="form-control"
+              [(ngModel)]="productDetails.categoryId"
+              required name="categoryId"
+              ngModel
+        />
       </div>
     </div>
 
@@ -16,12 +28,14 @@
       <div class="col-md-6 mb-3">
         <label for="validationCustom03">Descrição</label>
         <textarea class="form-control"
-          placeholder="Enter Product Description"
-          [(ngModel)]="productDetails.description"
-          required
-          name="description"
-          ngModel></textarea>
+                  placeholder="Enter Product Description"
+                  [(ngModel)]="productDetails.description"
+                  required
+                  name="description"
+                  ngModel>
+        </textarea>
       </div>
+
       <div class="col-md-6 mb-3">
         <label>Rating</label>
         <select class="custom-select" required name="product_rating" ngModel>
@@ -39,34 +53,37 @@
       <div class="col-md-6 mb-3">
         <label for="validationCustom03">Cor do Produto</label>
         <input type="text"
-          class="form-control"
-          id="validationCustom03"
-          [(ngModel)]="productDetails.color"
-          required
-          name="product_color"
-        ngModel/>
+              class="form-control"
+              id="validationCustom03"
+              [(ngModel)]="productDetails.color"
+              required
+              name="product_color"
+              ngModel
+        />
       </div>
+
       <div class="col-md-6 mb-3">
         <label>isAvailable</label>
-        <select class="custom-select"  required >
+        <select class="custom-select" required >
           <option selected value="">Choose...</option>
           <option value="1">yes</option>
           <option value="0">no</option>
         </select>
       </div>
-
     </div>
 
     <div class="form-row">
       <div class="col-md-6 mb-3">
         <label>Preço do produto</label>
-        <input type="text" class="form-control"
-          name="product_price"
-          [(ngModel)]="productDetails.price"
-          required
-          ngModel
-          />
+        <input type="text"
+              class="form-control"
+              name="product_price"
+              [(ngModel)]="productDetails.price"
+              required
+              ngModel
+        />
       </div>
+
       <div class="col-md-6 mb-3">
         <label>Reviews</label>
         <select class="custom-select">
@@ -75,9 +92,8 @@
           <option value="its ok ok ">2</option>
         </select>
       </div>
-
     </div>
 
     <button class="btn btn-primary" type="submit">Atualização do produto</button>
-  </form>
+</form>
 
