--- a/src/app/core/common/footer/footer.component.html
+++ b/src/app/core/common/footer/footer.component.html
@@ -9,8 +9,8 @@
         role="button"
         target="_blank"
         alt="facebook">
-        <i class="bx bxl-facebook"></i
-      ></a>
+        <i class="bx bxl-facebook"></i>
+      </a>
 
       <!-- Twitter -->
       <a class="btn btn-outline-light rounded-circle text-dark"
@@ -18,8 +18,8 @@
         role="button"
         target="_blank"
         alt="twitter">
-        <i class="bx bxl-twitter"></i
-      ></a>
+        <i class="bx bxl-twitter"></i>
+      </a>
 
       <!-- Google -->
       <a class="btn btn-outline-light rounded-circle text-dark"
@@ -27,8 +27,8 @@
         role="button"
         target="_blank"
         alt="google">
-        <i class="bx bxl-google"></i
-      ></a>
+        <i class="bx bxl-google"></i>
+      </a>
 
       <!-- Instagram -->
       <a class="btn btn-outline-light rounded-circle text-dark"
@@ -36,8 +36,8 @@
         role="button"
         target="_blank"
         alt="instragram">
-        <i class="bx bxl-instagram"></i
-      ></a>
+        <i class="bx bxl-instagram"></i>
+      </a>
 
       <!-- Linkedin -->
       <a class="btn btn-outline-light rounded-circle text-dark"
@@ -45,8 +45,8 @@
         role="button"
         target="_blank"
         alt="linkedin">
-        <i class="bx bxl-linkedin"></i
-      ></a>
+        <i class="bx bxl-linkedin"></i>
+      </a>
 
     </section>
   </div>
@@ -60,5 +60,4 @@
           Desenvolvido por Camila Augusta
     </a>
   </div>
-
 </footer>
