--- a/src/app/components/products/product-delete/product-delete.component.html
+++ b/src/app/components/products/product-delete/product-delete.component.html
@@ -1,3 +1,1 @@
-<h2>
-    O produto {{ productId }} foi deletado com sucesso!!
-</h2>
+<h2>O produto {{ productId }} foi deletado com sucesso!!</h2>
