Ajuste Endereco imagem no json-server

--- a/src/app/core/pages/about/about.component.html
+++ b/src/app/core/pages/about/about.component.html
@@ -23,7 +23,7 @@
 
 <section class="body-about list-group-item-warning">
   <div class="circle circle1">
-    <img src="../../../../assets/img/home.jpeg">
+    <img src="assets/img/home.jpeg">
   </div>
   <div>
     <h2>Moda Feminina - Sobre nós</h2>
