Ajuste Endereco imagem no json-server

--- a/src/app/core/pages/home/home.component.html
+++ b/src/app/core/pages/home/home.component.html
@@ -1,16 +1,8 @@
-<!--<div class="w3-display-container w3-wide center" id="home" >
-  <img class="w3-image " src="../../../assets/img/home.jpeg" style=" border-radius: 50%;">
-    <div class="w3-display-left w3-padding-large">
-      <h1 class="w3-jumbo w3-text-white w3-hide-small center"><b>Moda Feminina</b></h1>
-    </div>
-  </div>-->
-
-
 <div class="body-home">
   <div class="container">
       <div class="card">
           <div class="imgBx">
-            <img src="../../../assets/img/home.jpeg">
+            <img src="assets/img/home.jpeg">
           </div>
           <div class="content">
               <h2>Moda Feminina</h2>
